navbar vertical terminado

--- a/figuras.html
+++ b/figuras.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/estilo_figuras.css">
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<!-- Java script imagen zoom-->
+	<script src="https://unpkg.com/js-image-zoom@0.7.0/js-image-zoom.js" type="application/javascript"></script>
 </head>
 
 <body>
@@ -88,22 +90,22 @@
 	<nav class ="navbar_vertical">
 	<ul class ="nav navbar-nav">
 		<li class ="nav-item">
-			<a class ="nav-link" href="#"> Marvel </a>
+			<a class ="nav-link" href="#" id="Marvel"> Marvel </a>
 		</li>
 	<li class ="nav-item animate__fadeInUp">
-		<a class ="nav-link" href="#"> DC </a>
+		<a class ="nav-link" href="#" id="DC"> DC </a>
 	</li>
 	<li class ="nav-item">
-		<a class ="nav-link" href="#"> Comida </a>
+		<a class ="nav-link" href="#" id="Comida"> Comida </a>
 	</li>
 	<li class ="nav-item">
-		<a class ="nav-link" href="#"> Vehiculos </a>
+		<a class ="nav-link" href="#" id="Vehiculos"> Vehiculos </a>
 	</li>
 	<li class ="nav-item">
-		<a class ="nav-link" href="#"> Personaje </a>
+		<a class ="nav-link" href="#" id="Personaje"> Personaje </a>
 	</li>
 	<li class ="nav-item">
-		<a class ="nav-link" href="#"> Dragon Ball </a>
+		<a class ="nav-link" href="#" id="Dragon_Ball"> Dragon Ball </a>
 	</li>
 	</ul>
 		</nav>
@@ -118,6 +120,16 @@
 		<div class="inner">
 			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
 		</div>
+		<script>
+			var options = {
+				width: 400,
+				height: 250,
+				zoomWidth: 500,
+				offset: {vertical: 0, horizontal: 10},
+				scale: 1.5
+			}
+			new ImageZoom(document.getElementById("inner"), options);
+		</script>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
 		</div>
