estilo cards imagenes

--- a/figuras.html
+++ b/figuras.html
@@ -11,8 +11,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/estilo_figuras.css">
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-	<!-- Java script imagen zoom-->
-	<script src="https://unpkg.com/js-image-zoom@0.7.0/js-image-zoom.js" type="application/javascript"></script>
+	
 </head>
 
 <body>
@@ -116,27 +115,7 @@
 <!--GALERIA IMAGENES FIGURAS-->
 <div class="row justify-content-center">
 	<div class="col-md-4">
-		<div class="card-shadow" style="width: 14rem;">
-		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
-		</div>
-		<script>
-			var options = {
-				width: 400,
-				height: 250,
-				zoomWidth: 500,
-				offset: {vertical: 0, horizontal: 10},
-				scale: 1.5
-			}
-			new ImageZoom(document.getElementById("inner"), options);
-		</script>
-		<div class="card-body text-center bg-light">
-			<h5 class="card-title">15,00€</h5>
-		</div>
-		</div>
-	</div>
-	<div class="col-md-4">
-		<div class="card-shadow" style="width: 14rem;">
+		<div class="card" style="width: 14rem;">
 		<div class="inner">
 			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
 		</div>
@@ -146,7 +125,7 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<div class="card-shadow" style="width: 14rem;">
+		<div class="card" style="width: 14rem;">
 		<div class="inner">
 			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
 		</div>
@@ -156,7 +135,17 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<div class="card-shadow" style="width: 14rem">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem">
 		<div class="inner">
 			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
 		</div>
