Correciones y finalizada pagina log in

--- a/figuras.html
+++ b/figuras.html
@@ -101,7 +101,7 @@
 		<a class ="nav-link" href="#" id="Vehiculos"> Vehiculos </a>
 	</li>
 	<li class ="nav-item">
-		<a class ="nav-link" href="#" id="Personaje"> Personaje </a>
+		<a class ="nav-link" href="#" id="Personaje"> Militar </a>
 	</li>
 	<li class ="nav-item">
 		<a class ="nav-link" href="#" id="Dragon_Ball"> Dragon Ball </a>
@@ -113,6 +113,93 @@
 <!--NAVBAR VERTICAL FINAL-->
 
 <!--GALERIA IMAGENES FIGURAS-->
+	<!--Primera Fila-->
+<div class="row justify-content-center">
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/ironman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/dragonball1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+</div>
+<!--Segunda Fila-->
+<div class="row justify-content-center">
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem;">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<div class="card" style="width: 14rem">
+		<div class="inner">
+			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+		</div>
+		<div class="card-body text-center bg-light">
+			<h5 class="card-title">15,00€</h5>
+		</div>
+		</div>
+	</div>
+</div>
+<!-- Tercera Fila-->
 <div class="row justify-content-center">
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
