--- a/login.html
+++ b/login.html
@@ -7,13 +7,15 @@
     <title>Página Log in </title>
     <!--CSS Link-->
     <link rel="stylesheet" href="/css/login.css">
+    <!--Agregar link JQuery para enseñar/esconder Form -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="form">
             <div class="btn">
                 <button class="registrarseBtn">Registrate</button>
-                <button class="Login">Inicia Sesión</button>
+                <button class="LoginBtn">Inicia Sesión</button>
             </div>
             <form action="" class="iniciaSesion">
                 <div class="formGroup">
@@ -34,12 +36,32 @@
                     <span class="texto"> ESTOY DE ACUERDO CON LOS TERMINOS Y CONDICIONES</span>
                 </div>
                 <div class="formGroup">
-                    <button class="btn2">Registrarse!</button>
+                    <a href="prueba.html" class="btn2">Unirme</a>
                 </div>
+            </form>
 
-
+            <!--Creación parte Iniciar Sesión-->
+            <form action="" class="LogIn">
+                <div class="formGroup">
+                    <input type="email" name="Email" id="Email ID" placeholder="Email" autocomplete="off">
+                </div>
+                <div class="formGroup">
+                    <input type="password" name="contraseña" id="contraseña" placeholder="contraseña" autocomplete="off">
+                </div>
+                <!--Check Box-->
+                <div class="checkBox">
+                    <input type="checkbox" name="checkbox" id="checkbox">
+                    <span class="texto"> MANTENDEME INFORMADO DE NUEVOS PRODUCTOS POR EMAIL</span>
+                </div>
+                <div class="formGroup">
+                    <a href="prueba.html" class="btn2">Iniciar Sesión</a>
+                </div>
             </form>
         </div>
     </div>
+
+    <!--Link javscript-->
+    <script src="/js/script.js"></script>
+    
 </body>
 </html>
