--- a/prueba.html
+++ b/prueba.html
@@ -32,7 +32,7 @@
 						<a class="nav-link" href="#">Contacta</a>
 					  </li>
 					<li class="nav-item">
-						<a class="nav-link btn-danger ms-4" href="#contact">Iniciar Sesión</a>
+						<a class="nav-link btn-danger ms-4" href="login.html">Iniciar Sesión</a>
 					</li>
 				</ul>
 			</div>
