Continuacion footer pagina

--- a/prueba.html
+++ b/prueba.html
@@ -48,7 +48,7 @@
 				<div class="carousel-caption">
 					<h5>Busca miles de modelos 3D a la venta!</h5>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
-					<p><a class="btn btn-danger mt-3" href="#">Saber más</a></p>
+					<p><a class="btn btn-danger mt-3" href="#Bajar">Saber más</a></p>
 				</div>
 			</div>
 	</div>
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" id="Bajar">
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-white text-center bg-dark pb-2">
 						<div class="card-body">
@@ -87,8 +87,8 @@
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card text-white text-center bg-dark pb-2">
 						<div class="card-body">
-							<i class="bi bi-coin"></i>
-							<h3 class="card-title">Lorem ipsum</h3>
+							<i class="bi bi-recycle"></i>
+							<h3 class="card-title">Material Reciclado</h3>
 							<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eligendi modi temporibus alias iste. Accusantium?</p><button class="btn bg-danger text-light">Saber más</button>
 						</div>
 					</div>
@@ -97,34 +97,30 @@
 		</div>
 	</section>
 <!-- SECCION SERVICIOS FINAL -->
-<div class="container_vende">
-<div class="row">
-    <div class="col-md-6 order-md-6">
-      <img  class="imagen_vende" src="/img/vende.png" alt="" width="520" />
-    </div>
-	<div class="vende col-md-6 order-md-1">
-      <div class="row align-items-center h-100">
-        <div class="col">
-          <h1>Vende tus propios modelos</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit
-            <br /><br />
-            <p><a class="btn btn-danger mt-3" href="#">Saber más</a></p>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> 
+<!--Seccion 2-->
+<div class="section-2">
+	<div class="container-fluid">
+		<div class="d-flex justify-content-end">
+			<div class="d-flex flex-column m-4">
+				<h1 class="heading-1">Vende tus modelos</h1>
+				<p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eligendi modi</p>
+			</div>
+			<div class="scene">
+				<script src="/app.js"></script>
+				<script src="/GLTFLoader.js"></script>
+				<script src="/three.min.js"></script>
+			</div>
+		</div>
+	</div>
+	</div>
 
-
-
-
+	
 	
 	
 	
 	
 	<!--Scripts-->
-	<script src="js/bootstrap.bundle.min.js"></script> 
+	<script src="js/bootstrap.bundle.min.js"></script> 	
 	
 </body>
 </html>
