--- a/figuras.html
+++ b/figuras.html
@@ -23,16 +23,10 @@
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
 						<a class="nav-link" href="prueba.html">Inicio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="">Vende Modelos 3D</a>
-					</li>		
+					</li>	
 					<li class="nav-item">
 						<a class="nav-link" href="figuras.html"> Modelos 3D</a>
 					</li>
-					  <li class="nav-item">
-						<a class="nav-link" href="#">Contacta</a>
-					  </li>
 					<li class="nav-item">
 						<a class="nav-link btn-danger ms-4" href="login.html">Iniciar Sesión</a>
 					</li>
@@ -41,9 +35,6 @@
 		</div>
 	</nav>
 	<!--FINAL NAVBAR-->
-	<div class="populares_title">
-		<h1 class="display-4">Más Populares</h1>
-	</div>
     <!--INICIO CARDS-->
     <div class="main disney-rows">
         <div class="grid">
@@ -89,7 +80,7 @@
 	<nav class ="navbar_vertical">
 	<ul class ="nav navbar-nav">
 		<li class ="nav-item">
-			<a class ="nav-link" href="#" id="Marvel"> Marvel </a>
+			<a class ="nav-link" href="#Marvel2" id="Marvel"> Marvel </a>
 		</li>
 	<li class ="nav-item animate__fadeInUp">
 		<a class ="nav-link" href="#" id="DC"> DC </a>
@@ -129,7 +120,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/ironman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/ironman1.jpg" id="Marvel2" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -158,7 +149,7 @@
 	</div>
 </div>
 <!--Segunda Fila-->
-<div class="row justify-content-center">
+<div id="figuras" class="row justify-content-center">
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
@@ -201,6 +192,7 @@
 	</div>
 </div>
 <!-- Tercera Fila-->
+<div class="figuras">
 <div class="row justify-content-center">
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
@@ -243,7 +235,7 @@
 		</div>
 	</div>
 </div>
-
+</div>
   
 
   
