Nueva imagenes de figuras

--- a/prueba.html
+++ b/prueba.html
@@ -40,7 +40,7 @@
 				<img alt="..." class="d-block w-100" src="img/comic.jpg">
 				<div class="carousel-caption">
 					<h5>Busca miles de modelos 3D a la venta!</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+					<p>Encuentre el contenido 3D exacto para sus necesidades, incluyendo AR/VR, juegos, publicidad, entretenimiento e impresión 3D.</p>
 					<p><a class="btn btn-danger mt-3" href="#Bajar">Saber más</a></p>
 				</div>
 			</div>
@@ -53,8 +53,8 @@
 				<div class="col-md-12">
 					<div class="section-header text-center pb-5">
 						<h1>Servicios 3D para empresas</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur<br>
-						adipisicing elit. Non, quo.</p>
+						<p>Te ofrecemos los mejores servicios<br>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -63,8 +63,8 @@
 					<div class="card text-white text-center bg-dark pb-2">
 						<div class="card-body">
 							<i class="bi bi-laptop"></i>
-							<h3 class="card-title">Implementación AR</h3>
-							<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eligendi modi temporibus alias iste. Accusantium?</p><button class="btn bg-danger text-light">Saber más</button>
+							<h3 class="card-title">Implementación AR/VR</h3>
+							<p class="lead">Realidad Aumentada es un recurso tecnológico que ofrece experiencias únicas al usuario a partir de la combinación entre la dimensión virtual y la física, con la utilización de dispositivos digitales.</p><button class="btn bg-danger text-light">Saber más</button>
 						</div>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 						<div class="card-body">
 							<i class="bi bi-capslock"></i>
 							<h3 class="card-title">Calidad</h3>
-							<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eligendi modi temporibus alias iste. Accusantium?</p><button class="btn bg-danger text-light">Saber más</button>
+							<p class="lead">Calidad garantizada </p><button class="btn bg-danger text-light">Saber más</button>
 						</div>
 					</div>
 				</div>
@@ -82,7 +82,7 @@
 						<div class="card-body">
 							<i class="bi bi-recycle"></i>
 							<h3 class="card-title">Material Reciclado</h3>
-							<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eligendi modi temporibus alias iste. Accusantium?</p><button class="btn bg-danger text-light">Saber más</button>
+							<p class="lead">Reemplazamos nuestro suministro de filamento comprado por uno reciclado y de fabricación casera. Sólo tienes que reciclar unas cuantas botellas de plastico viejas </p><button class="btn bg-danger text-light">Saber más</button>
 						</div>
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 		<div class="d-flex justify-content-end">
 			<div class="d-flex flex-column m-4">
 				<h1 class="heading-1">Vende tus modelos</h1>
-				<p class="para">Únete a nuestra familia y saca beneficio de tus propios modelos </p>
+				<p class="para">Vende tus modelos 3D y encuentra proyectos freelance </p>
 			</div>
 			<div class="modelo_dragon">
 				<img src="/img/dragon.png" alt="" class="dragon">
@@ -108,7 +108,7 @@
 <!--FOOTER INICIO-->
 <footer>
 	<div class="section-5 text-center">
-		<h4 style="margin-top:5%;">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</h4>
+		<h4 style="margin-top:5%;">Figure3D es una empresa internacional con oficinas en Europa y Estados Unidos.</h4>
 		<br>
 		<div class="form-inline justify-content-center">
 			<input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2" style="width: 20%; position: absolute; left: 40%; ">
@@ -138,6 +138,7 @@
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	
+	<!--Javascript animación página-->
 	<script>
 		window.sr = ScrollReveal({ duration : 1000 });
 		sr.reveal('.site-content d-flex');
