--- a/figuras.html
+++ b/figuras.html
@@ -18,7 +18,7 @@
 	<!--INICIO NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#"><span class="text-danger">Figure</span>3D</a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+			<a class="navbar-brand" href="#"><span class="text-danger">Global</span>Figure</a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
@@ -35,7 +35,7 @@
 		</div>
 	</nav>
 	<!--FINAL NAVBAR-->
-    <!--INICIO CARDS-->
+    <!--INICIO CARDS CON GIFS-->
     <div class="main disney-rows">
         <div class="grid">
           <div class="card-disney">
@@ -72,7 +72,7 @@
         </div>
       </div>	
 	</div>
-<!--FINAL CARDS-->
+<!--FINAL CARDS CON GIFS-->
 
 <!--NAVBAR VERTICAL-->
 <div class="row">
@@ -83,7 +83,7 @@
 			<a class ="nav-link" href="#Marvel2" id="Marvel"> Marvel </a>
 		</li>
 	<li class ="nav-item animate__fadeInUp">
-		<a class ="nav-link" href="#" id="DC"> DC </a>
+		<a class ="nav-link" href="#DC" id="DC"> DC </a>
 	</li>
 	<li class ="nav-item">
 		<a class ="nav-link" href="#" id="Comida"> Comida </a>
@@ -140,7 +140,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/doctor-strange-3d.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -153,7 +153,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/celula.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -163,7 +163,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/batman_3d.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -173,7 +173,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/joker.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -183,7 +183,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/batman2.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -197,7 +197,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/harrypotter.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -207,7 +207,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/deadpool.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -217,7 +217,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/goku2.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -227,7 +227,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="/img/img_figuras/spiderman.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
