Cambio de fondo y logo

--- a/prueba.html
+++ b/prueba.html
@@ -15,7 +15,7 @@
 	<!--INICIO NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#"><span class="text-danger">Figure</span>3D</a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+			<a class="navbar-brand" href="#"><span class="text-danger">Global</span>Figure</a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
@@ -90,7 +90,7 @@
 		</div>
 	</section>
 <!-- SECCION SERVICIOS FINAL -->
-<!--Seccion 2-->
+<!--SECCION 2 / VENDE TUS MODELOS -->
 <div class="section-2">
 	<div class="container-fluid">
 		<div class="d-flex justify-content-end">
@@ -104,11 +104,11 @@
 		</div>
 	</div>
 </div>
-
+<!--SECCION 2 / VENDE TUS MODELOS FINAL-->
 <!--FOOTER INICIO-->
 <footer>
 	<div class="section-5 text-center">
-		<h4 style="margin-top:5%;">Figure3D es una empresa internacional con oficinas en Europa y Estados Unidos.</h4>
+		<h4 style="margin-top:5%;">GlobalFigure es una empresa internacional con oficinas en Europa y Estados Unidos.</h4>
 		<br>
 		<div class="form-inline justify-content-center">
 			<input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2" style="width: 20%; position: absolute; left: 40%; ">
@@ -137,6 +137,8 @@
 	<script src="/app.js"></script> 	
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
+	
 	
 	<!--Javascript animación página-->
 	<script>
