--- a/login.html
+++ b/login.html
@@ -11,6 +11,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+<div id="loader"></div>
+
+
+
     <div class="container">
         <div class="form">
             <div class="btn">
