--- a/prueba.html
+++ b/prueba.html
@@ -113,6 +113,9 @@
 		<div class="form-inline justify-content-center">
 			<input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2" style="width: 20%; position: absolute; left: 40%; ">
 			<input type="button" value="Contactar" class="btn btn-danger mt-30" style="position: absolute; bottom: 7,5%; left: 62%;">
+			<div class="logo_footer">
+				<img src="/img/Logo_11.png" width="310px"  alt="">
+			</div>
 		</div>
 
 
@@ -125,10 +128,9 @@
 			</div>
 		</div>
 
-		<hr>
 	</div>
 </footer>
-	
+
 	
 	
 	
