--- a/prueba.html
+++ b/prueba.html
@@ -16,7 +16,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="#">
-				<img src="/img/img_figuras/banner.png" height="50px" width="190px"  alt="">
+				<img src="/img/img_figuras/banner.png" alt="">
 			  </a>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
