--- a/prueba.html
+++ b/prueba.html
@@ -15,7 +15,7 @@
 	<!--INICIO NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="prueba.html">
 				<img src="/img/img_figuras/banner.png" alt="">
 			  </a>
 			<div class="collapse navbar-collapse">
