--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                     <span class="texto"> ESTOY DE ACUERDO CON LOS TERMINOS Y CONDICIONES</span>
                 </div>
                 <div class="formGroup">
-                    <a href="prueba.html" class="btn2">Unirme</a>
+                    <a href="index.html" class="btn2">Unirme</a>
                 </div>
             </form>
 
@@ -58,7 +58,7 @@
                     <span class="texto"> MANTENDEME INFORMADO DE NUEVOS PRODUCTOS POR EMAIL</span>
                 </div>
                 <div class="formGroup">
-                    <a href="prueba.html" class="btn2">Iniciar Sesión</a>
+                    <a href="index.html" class="btn2">Iniciar Sesión</a>
                 </div>
             </form>
         </div>
