--- a/figuras.html
+++ b/figuras.html
@@ -18,13 +18,13 @@
 	<!--INICIO NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="prueba.html">
+			<a class="navbar-brand" href="index.html">
 				<img src="/img/img_figuras/banner.png" alt="">
 			  </a>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link" href="prueba.html">Inicio</a>
+						<a class="nav-link" href="index.html">Inicio</a>
 					</li>	
 					<li class="nav-item">
 						<a class="nav-link" href="figuras.html"> Modelos 3D</a>
