Correción ruta imagenes y link css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">
-				<img src="/img/img_figuras/banner.png" alt="">
+				<img src="./img/img_figuras/banner.png" alt="">
 			  </a>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -24,10 +24,10 @@
 						<a class="nav-link" href="#">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="figuras.html"> Modelos 3D</a>
+						<a class="nav-link" href="./figuras.html"> Modelos 3D</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link btn-danger ms-4" href="login.html">Iniciar Sesión</a>
+						<a class="nav-link btn-danger ms-4" href="./login.html">Iniciar Sesión</a>
 					</li>
 				</ul>
 			</div>
@@ -39,7 +39,7 @@
 	<div class="carousel slide" data-bs-ride="carousel" id="carouselExampleSlidesOnly">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img alt="..." class="d-block w-100" src="img/comic.jpg">
+				<img alt="..." class="d-block w-100" src="./img/comic.jpg">
 				<div class="carousel-caption">
 					<h5>Busca miles de modelos 3D a la venta!</h5>
 					<p>Encuentre el contenido 3D exacto para sus necesidades, incluyendo AR/VR, juegos, publicidad, entretenimiento e impresión 3D.</p>
@@ -101,7 +101,7 @@
 				<p class="para">Vende tus modelos 3D y encuentra proyectos freelance </p>
 			</div>
 			<div class="modelo_dragon">
-				<img src="/img/dragon.png" alt="" class="dragon">
+				<img src="./img/dragon.png" alt="" class="dragon">
 			</div>
 		</div>
 	</div>
@@ -116,7 +116,7 @@
 			<input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2" style="width: 20%; position: absolute; left: 40%; ">
 			<input type="button" value="Contactar" class="btn btn-danger mt-30" style="position: absolute; bottom: 7,5%; left: 62%;">
 			<div class="logo_footer">
-				<img src="/img/Logo_11.png" width="310px"  alt="">
+				<img src="./img/Logo_11.png" width="310px"  alt="">
 			</div>
 		</div>
 
