--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Log in </title>
     <!--CSS Link-->
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
     <!--Agregar link JQuery para enseñar/esconder Form -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -40,7 +40,7 @@
                     <span class="texto"> ESTOY DE ACUERDO CON LOS TERMINOS Y CONDICIONES</span>
                 </div>
                 <div class="formGroup">
-                    <a href="index.html" class="btn2">Unirme</a>
+                    <a href="./index.html" class="btn2">Unirme</a>
                 </div>
             </form>
 
@@ -58,14 +58,14 @@
                     <span class="texto"> MANTENDEME INFORMADO DE NUEVOS PRODUCTOS POR EMAIL</span>
                 </div>
                 <div class="formGroup">
-                    <a href="index.html" class="btn2">Iniciar Sesión</a>
+                    <a href="./index.html" class="btn2">Iniciar Sesión</a>
                 </div>
             </form>
         </div>
     </div>
 
     <!--Link javscript-->
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
     
 </body>
 </html>
