--- a/figuras.html
+++ b/figuras.html
@@ -42,32 +42,32 @@
         <div class="grid">
           <div class="card-disney">
             <div class="item-border">
-              <img src="/img/marvel2.jpg" class="item-image">
-              <img src="/img/marvel-gif.gif" class="item-image hover-image">
+              <img src="./img/marvel2.jpg" class="item-image">
+              <img src="./img/marvel-gif.gif" class="item-image hover-image">
             </div>
           </div>
 		  <div class="card-disney">
             <div class="item-border">
-              <img src="/img/DC.jpg" class="item-image">
-              <img src="/img/dc-comics.gif" class="item-image hover-image">
+              <img src="./img/DC.jpg" class="item-image">
+              <img src="./img/dc-comics.gif" class="item-image hover-image">
             </div>
           </div>
 		  <div class="card-disney">
             <div class="item-border">
-              <img src="/img/Dragon-Ball-logo.png" class="item-image">
-              <img src="/img/dragon-ball.gif" class="item-image hover-image">
+              <img src="./img/Dragon-Ball-logo.png" class="item-image">
+              <img src="./img/dragon-ball.gif" class="item-image hover-image">
             </div>
           </div>
 		  <div class="card-disney">
             <div class="item-border">
-              <img src="/img/lordOfTheRingLogo.png" class="item-image">
-              <img src="/img/ring.gif" class="item-image hover-image">
+              <img src="./img/lordOfTheRingLogo.png" class="item-image">
+              <img src="./img/ring.gif" class="item-image hover-image">
             </div>
           </div>
 		  <div class="card-disney">
             <div class="item-border">
-              <img src="/img/harrypotter.jpg" class="item-image">
-              <img src="/img/harry.gif" class="item-image hover-image">
+              <img src="./img/harrypotter.jpg" class="item-image">
+              <img src="./img/harry.gif" class="item-image hover-image">
             </div>
           </div>
           </div>
@@ -112,7 +112,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman1.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/batman1.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -122,7 +122,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/ironman1.jpg" id="Marvel2" class="card-img-top" alt="">
+			<img src="./img/img_figuras/ironman1.jpg" id="Marvel2" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -132,7 +132,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/dragonball1.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/dragonball1.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -142,7 +142,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/doctor-strange-3d.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/doctor-strange-3d.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -155,7 +155,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/celula.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/celula.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -165,7 +165,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/batman_3d.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/batman_3d.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -175,7 +175,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/joker.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/joker.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -185,7 +185,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem">
 		<div class="inner">
-			<img src="/img/img_figuras/batman2.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/batman2.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -199,7 +199,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/harrypotter.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/harrypotter.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -209,7 +209,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/deadpool.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/deadpool.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -219,7 +219,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem;">
 		<div class="inner">
-			<img src="/img/img_figuras/goku2.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/goku2.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -229,7 +229,7 @@
 	<div class="col-md-4">
 		<div class="card" style="width: 14rem">
 		<div class="inner">
-			<img src="/img/img_figuras/spiderman.jpg" class="card-img-top" alt="">
+			<img src="./img/img_figuras/spiderman.jpg" class="card-img-top" alt="">
 		</div>
 		<div class="card-body text-center bg-light">
 			<h5 class="card-title">15,00€</h5>
@@ -244,7 +244,7 @@
 
 
 <!--Scripts-->
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src=".js/bootstrap.bundle.min.js"></script>
 
 </body>  
 </html>  
