--- a/figuras.html
+++ b/figuras.html
@@ -6,10 +6,10 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Proyecto figuras impresas 3D</title>
 	<!-- links estilos -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="./css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/estilo_figuras.css">
+    <link rel="stylesheet" href="./css/estilo_figuras.css">
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	
 </head>
@@ -18,19 +18,19 @@
 	<!--INICIO NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">
-				<img src="/img/img_figuras/banner.png" alt="">
+			<a class="navbar-brand" href="./index.html">
+				<img src="./img/img_figuras/banner.png" alt="">
 			  </a>
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Inicio</a>
+						<a class="nav-link" href="./index.html">Inicio</a>
 					</li>	
 					<li class="nav-item">
-						<a class="nav-link" href="figuras.html"> Modelos 3D</a>
+						<a class="nav-link" href="./figuras.html"> Modelos 3D</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link btn-danger ms-4" href="login.html">Iniciar Sesión</a>
+						<a class="nav-link btn-danger ms-4" href="./login.html">Iniciar Sesión</a>
 					</li>
 				</ul>
 			</div>
