--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="./css/style.css" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target="#navbarSupportedContent">
 	<!--INICIO NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="./index.html">
 				<img src="./img/img_figuras/banner.png" alt="">
 			  </a>
 			<div class="collapse navbar-collapse">
@@ -137,8 +137,8 @@
 	
 	
 	<!--Scripts-->
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="/app.js"></script> 	
+	<script src="./js/bootstrap.bundle.min.js"></script>
+	<script src="./app.js"></script> 	
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
