--- a/figuras.html
+++ b/figuras.html
@@ -244,7 +244,7 @@
 
 
 <!--Scripts-->
-<script src=".js/bootstrap.bundle.min.js"></script>
+<script src="./js/bootstrap.bundle.min.js"></script>
 
 </body>  
 </html>  
